--- a/grid.html
+++ b/grid.html
@@ -59,7 +59,7 @@
                             <a href="img/big_portfolio_item_4.jpg" data-lightbox="image-1"><div class="hover-effect">
                                 <div class="hover-content">
                                     <h1>Biodiesel <em>squid</em></h1>
-                                    <p>Awesome Subtittle Goes Here</p>
+                                    <p>biodiesel</p>
                                 </div>
                             </div></a>
                             <div class="image">
@@ -74,7 +74,7 @@
                             <a href="img/big_portfolio_item_2.jpg" data-lightbox="image-1"><div class="hover-effect">
                                 <div class="hover-content">
                                     <h1>raclette <em>taxidermy</em></h1>
-                                    <p>Awesome Subtittle Goes Here</p>
+                                    <p>raclette</p>
                                 </div>
                             </div></a>
                             <div class="image">
@@ -89,7 +89,7 @@
                             <a href="img/big_portfolio_item_3.jpg" data-lightbox="image-1"><div class="hover-effect">
                                 <div class="hover-content">
                                     <h1>humblebrag <em>brunch</em></h1>
-                                    <p>Awesome Subtittle Goes Here</p>
+                                    <p>humblebarg</p>
                                 </div>
                             </div></a>
                             <div class="image">
@@ -104,7 +104,7 @@
                             <a href="img/big_portfolio_item_1.jpg" data-lightbox="image-1"><div class="hover-effect">
                                 <div class="hover-content">
                                     <h1>Succulents <em>chambray</em></h1>
-                                    <p>Awesome Subtittle Goes Here</p>
+                                    <p>succulents</p>
                                 </div>
                             </div></a>
                             <div class="image">
@@ -119,7 +119,7 @@
                             <a href="img/big_portfolio_item_5.jpg" data-lightbox="image-1"><div class="hover-effect">
                                 <div class="hover-content">
                                     <h1>freegan <em>aesthetic</em></h1>
-                                    <p>Awesome Subtittle Goes Here</p>
+                                    <p>freegant</p>
                                 </div>
                             </div></a>
                             <div class="image">
@@ -134,7 +134,7 @@
                             <a href="img/big_portfolio_item_6.jpg" data-lightbox="image-1"><div class="hover-effect">
                                 <div class="hover-content">
                                     <h1>taiyaki <em>vegan</em></h1>
-                                    <p>Awesome Subtittle Goes Here</p>
+                                    <p>Taitaki</p>
                                 </div>
                             </div></a>
                             <div class="image">
@@ -149,7 +149,7 @@
                             <a href="img/big_portfolio_item_7.jpg" data-lightbox="image-1"><div class="hover-effect">
                                 <div class="hover-content">
                                     <h1>Thundercats <em>santo</em></h1>
-                                    <p>Awesome Subtittle Goes Here</p>
+                                    <p>thundrcats</p>
                                 </div>
                             </div></a>
                             <div class="image">
@@ -164,7 +164,7 @@
                             <a href="img/big_portfolio_item_8.jpg" data-lightbox="image-1"><div class="hover-effect">
                                 <div class="hover-content">
                                     <h1>wayfarers <em>yuccie</em></h1>
-                                    <p>Awesome Subtittle Goes Here</p>
+                                    <p>wayfarers</p>
                                 </div>
                             </div></a>
                             <div class="image">
@@ -179,7 +179,7 @@
                             <a href="img/big_portfolio_item_9.jpg" data-lightbox="image-1"><div class="hover-effect">
                                 <div class="hover-content">
                                     <h1>disrupt <em>street</em></h1>
-                                    <p>Awesome Subtittle Goes Here</p>
+                                    <p>Dispurt</p>
                                 </div>
                             </div></a>
                             <div class="image">
