--- a/grid.html
+++ b/grid.html
@@ -192,7 +192,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="load-more-button">
-                        <a href="#">Load More</a>
+                        <a href="photos.html">Load More</a>
                     </div>
                 </div>
             </div>
