--- a/photos.html
+++ b/photos.html
@@ -62,7 +62,13 @@
   <label class="gallery__item" for="12"><img src="https://source.unsplash.com/random/400x400?,Dog&amp;v=23" alt="Something random"/></label>
 </div>
 
-
+<footer>
+    <div class="container-fluid">
+        <div class="col-md-12">
+            <p>Copyright &copy; 2020 Mal4D's 🇲🇦️</p>
+        </div>
+    </div>
+</footer>
   
 
 	</body>
