--- a/photos.html
+++ b/photos.html
@@ -61,19 +61,12 @@
   <label class="gallery__item" for="11"><img src="https://source.unsplash.com/random/400x400?,Dog&amp;v=12" alt="Something random"/></label>
   <label class="gallery__item" for="12"><img src="https://source.unsplash.com/random/400x400?,Dog&amp;v=23" alt="Something random"/></label>
   	
-  <footer>
-      <div class="container-fluid">
-          <div class="col-md-12">
-              <p>           Copyright &copy; 2020 Mal4D's 🇲🇦️          </p>
-          </div>
-      </div>
-  </footer>
 </div>
 
 <footer>
     <div class="container-fluid">
         <div class="col-md-12">
-            <p>           Copyright &copy; 2020 Mal4D's 🇲🇦️          </p>
+            <p>    <em>       Copyright &copy; 2020 Mal4D's 🇲🇦️ <em>         </p>
         </div>
     </div>
 </footer>
